# god

./: .envrc  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: HANDOFF.md
docs/tutorial/: 00-introduction.md  01-kvm-foundation.md  02-vm-creation-memory.md  03-vcpu-run-loop.md  04-serial-console.md  05-interrupt-controller.md  06-timer.md  07-booting-linux.md  07-virtio-devices.md  08-booting-linux.md  08-interactive-console-prompt.md  08-interactive-console.md  08-virtio-devices.md  09-appendix.md
lima/: god.yaml
src/god/: cli.py  terminal.py
src/god/boot/: __init__.py  dtb.py  kernel.py  loader.py
src/god/devices/: __init__.py  device.py  gic.py  registry.py  timer.py  uart.py
src/god/devices/virtio/: __init__.py  console.py  mmio.py  queue.py
src/god/kvm/: __init__.py  bindings.py  capabilities.py  constants.py  system.py
src/god/vcpu/: __init__.py  registers.py  runner.py  vcpu.py
src/god/vm/: __init__.py  layout.py  memory.py  vm.py
tests/: test_cli.py  test_virtio.py
tests/guest_code/: .gitignore  hello.S  simple.S  timer_test  timer_test.S
