[project]
name = "god"
version = "0.1.0"
description = "A Virtual Machine Manager"
readme = "README.md"
authors = [
    { name = "nicolasmesa", email = "your-email@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cffi>=2.0.0",
    "typer>=0.15.0",
    "fdt>=0.3.0",
]

[project.scripts]
god = "god.cli:app"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
